<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:HListView="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/set_timer_thanks"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fpp_tile_margin"
        android:layout_marginTop="@dimen/fpp_tile_margin"
        android:gravity="center"
        android:text="@string/timer_expired_thanks"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fpp_tile_margin"
        android:layout_marginTop="@dimen/fpp_tile_margin"
        android:gravity="center"
        android:text="@string/timer_expired_message"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/fpp_tile_margin"
        android:layout_marginTop="@dimen/fpp_tile_margin"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/dialog_timer_expired_clock" />

    <TextView
        android:id="@+id/text_parents"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fpp_tile_margin"
        android:layout_marginTop="@dimen/fpp_tile_margin"
        android:gravity="center"
        android:text="@string/timer_expired_parent"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

</LinearLayout>