<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:HListView="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/free_heading"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fpp_tile_margin"
            android:layout_marginTop="@dimen/fpp_tile_margin"
            android:gravity="center"
            android:paddingRight="20dp"
            android:text="@string/free_heading"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/free_image"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/fpp_tile_margin"
            android:layout_marginTop="@dimen/fpp_tile_margin"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:src="@drawable/img_video_loading_big" />

        <Button
            android:id="@+id/free_watch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/fpp_tile_margin"
            android:background="@drawable/btn_fpp_green"
            android:gravity="center"
            android:text="@string/free_watch"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/dialog_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:contentDescription="@string/app_name"
        android:src="@drawable/btn_dialog_close"
        />

</RelativeLayout>